--- a/cruftbot/jinja2/index.html
+++ b/cruftbot/jinja2/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous">
+      href="{{ static('bootstrap/dist/css/bootstrap.min.css') }}">
     <title>
       Hello, world!
     </title>
@@ -17,17 +15,13 @@
       Hello, world!
     </h1>
     <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-      integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-      crossorigin="anonymous">
+      src="{{ static('jquery/dist/jquery.slim.min.js') }}">
     </script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-      integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-      crossorigin="anonymous">
+      src="{{ static('popper.js/dist/popper.min.js') }}">
     </script>
-    <!--
-      @todo #15 Setup django-node-assets package.
-     -->
+    <script
+      src="{{ static('bootstrap/dist/js/bootstrap.min.js') }}">
+    </script>
   </body>
 </html>
