--- a/cruftbot/infrastructure/jinja2/index.html
+++ b/cruftbot/infrastructure/jinja2/index.html
@@ -1,27 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-      rel="stylesheet"
-      href="{{ static('bootstrap/dist/css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ static('bulma/css/bulma.min.css') }}">
     <title>
       Hello, world!
     </title>
   </head>
   <body>
-    <h1>
-      Hello, world!
-    </h1>
-    <script
-      src="{{ static('jquery/dist/jquery.slim.min.js') }}">
-    </script>
-    <script
-      src="{{ static('popper.js/dist/popper.min.js') }}">
-    </script>
-    <script
-      src="{{ static('bootstrap/dist/js/bootstrap.min.js') }}">
-    </script>
+    <section class="section">
+      <div class="container">
+        <h1 class="title">
+          Hello, world!
+        </h1>
+      </div>
+    </section>
   </body>
 </html>
